commit install dependency

--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,29 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/line-awesome/dist/line-awesome/css/line-awesome.css",
+              "node_modules/filepond/dist/filepond.min.css",
+              "node_modules/angular-calendar/css/angular-calendar.css",
+              "node_modules/morris.js/morris.css",
+              "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/ng-drag-drop/style.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
+              "node_modules/raphael/raphael.js",
+              "node_modules/morris.js/morris.js",
+              "node_modules/datatables.net-bs4/js/dataTables.bootstrap4.js"
+            ]
           },
           "configurations": {
             "production": {
