--- a/package.json
+++ b/package.json
@@ -12,13 +12,54 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.0",
+    "@angular/cdk": "^11.2.1",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
     "@angular/forms": "~11.1.0",
+    "@angular/language-service": "^11.2.1",
+    "@angular/localize": "^11.2.1",
+    "@angular/material": "^11.2.1",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@material-ui/popper.js": "^1.16.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@types/datatables.net": "^1.10.19",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jquery": "^3.5.5",
+    "angular-calendar": "^0.28.22",
+    "angular-datatables": "^11.1.1",
+    "angular-in-memory-web-api": "^0.11.0",
+    "angular-morris-js": "^2.0.1",
+    "angularx-flatpickr": "^6.5.2",
+    "bootstrap": "^4.6.0",
+    "calendar-utils": "^0.8.4",
+    "core-js": "^3.8.3",
+    "datatables.net": "^1.10.23",
+    "datatables.net-bs4": "^1.10.23",
+    "datatables.net-dt": "^1.10.23",
+    "date-fns": "^2.17.0",
+    "filepond": "^4.25.1",
+    "flatpickr": "^4.6.9",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "jquery-dropdown": "^1.0.0",
+    "line-awesome": "^1.3.0",
+    "morris.js": "^0.5.0",
+    "ng-drag-drop": "^5.0.0",
+    "ng-select2": "^1.2.5",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-filepond": "^6.0.0",
+    "ngx-mask": "^11.1.4",
+    "popper.js": "^1.16.0",
+    "positioning": "^1.3.1",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.0",
+    "raphael": "^2.3.0",
+    "ngx-perfect-scrollbar": "^10.1.0",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -27,11 +68,11 @@
     "@angular-devkit/build-angular": "~0.1101.1",
     "@angular/cli": "~11.1.1",
     "@angular/compiler-cli": "~11.1.0",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.6.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^5.0.2",
     "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
