--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/flatpickr/dist/flatpickr.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/font-awesome/css/font-awesome.css",
@@ -52,7 +53,8 @@
               "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/raphael/raphael.js",
               "node_modules/morris.js/morris.js",
-              "node_modules/datatables.net-bs4/js/dataTables.bootstrap4.js"
+              "node_modules/datatables.net-bs4/js/dataTables.bootstrap4.js",
+              "src/assets/js/app.js"
             ]
           },
           "configurations": {
