--- a/package.json
+++ b/package.json
@@ -49,17 +49,19 @@
     "morris.js": "^0.5.0",
     "ng-drag-drop": "^5.0.0",
     "ng-select2": "^1.2.5",
+    "ng2-flatpickr": "^9.0.0",
     "ng2-search-filter": "^0.5.1",
-    "ngx-bootstrap": "^6.2.0",
+    "ngx-bootstrap": "^5.6.2",
+    "ngx-date-picker": "0.0.24",
     "ngx-filepond": "^6.0.0",
     "ngx-mask": "^11.1.4",
+    "ngx-perfect-scrollbar": "^10.1.0",
+    "ngx-toastr": "^13.2.0",
     "popper.js": "^1.16.0",
     "positioning": "^1.3.1",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
     "raphael": "^2.3.0",
-    "ngx-perfect-scrollbar": "^10.1.0",
-    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
