--- a/angular.json
+++ b/angular.json
@@ -1,160 +1,156 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": "19084061-38ee-40de-bc14-863ce83e3828"
-  },
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "Ecommerce-AdminLTE": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/Ecommerce-AdminLTE",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              {
-                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
-              },
-              "node_modules/flatpickr/dist/flatpickr.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/line-awesome/dist/line-awesome/css/line-awesome.css",
-              "node_modules/filepond/dist/filepond.min.css",
-              "node_modules/angular-calendar/css/angular-calendar.css",
-              "node_modules/morris.js/morris.css",
-              "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css",
-              "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/ng-drag-drop/style.css",
-              "src/styles.css"
-            ],
-            "scripts": [
-              "src/assets/js/jquery-3.2.1.min.js",
-              "src/assets/js/popper.min.js",
-              "src/assets/js/bootstrap.min.js",
-              "src/assets/js/jquery.dataTables.min.js",
-              "node_modules/raphael/raphael.js",
-              "node_modules/morris.js/morris.js",
-              "src/assets/js/dataTables.bootstrap4.min.js",
-              "src/assets/js/jquery-3.2.1.min.js",
-              "src/assets/js/app.js"
-            ]
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "cli": {
+        "analytics": "19084061-38ee-40de-bc14-863ce83e3828"
+    },
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+        "Ecommerce-AdminLTE": {
+            "projectType": "application",
+            "schematics": {
+                "@schematics/angular:application": {
+                    "strict": true
                 }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+            },
+            "root": "",
+            "sourceRoot": "src",
+            "prefix": "app",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:browser",
+                    "options": {
+                        "outputPath": "dist/Ecommerce-AdminLTE",
+                        "index": "src/index.html",
+                        "main": "src/main.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "tsconfig.app.json",
+                        "aot": true,
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets"
+                        ],
+                        "styles": [{
+                                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+                            },
+                            "node_modules/flatpickr/dist/flatpickr.min.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+                            "node_modules/font-awesome/css/font-awesome.css",
+                            "node_modules/line-awesome/dist/line-awesome/css/line-awesome.css",
+                            "node_modules/filepond/dist/filepond.min.css",
+                            "node_modules/angular-calendar/css/angular-calendar.css",
+                            "node_modules/morris.js/morris.css",
+                            "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css",
+                            "node_modules/primeng/resources/themes/saga-blue/theme.css",
+                            "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/ng-drag-drop/style.css",
+                            "src/styles.css",
+                            "src/assets/kendo-theme/default-4.24.0/all.css"
+                        ],
+                        "scripts": [
+                            "src/assets/js/jquery-3.2.1.min.js",
+                            "src/assets/js/popper.min.js",
+                            "src/assets/js/bootstrap.min.js",
+                            "src/assets/js/jquery.dataTables.min.js",
+                            "node_modules/raphael/raphael.js",
+                            "node_modules/morris.js/morris.js",
+                            "src/assets/js/dataTables.bootstrap4.min.js",
+                            "src/assets/js/jquery-3.2.1.min.js",
+                            "src/assets/js/app.js"
+                        ]
+                    },
+                    "configurations": {
+                        "production": {
+                            "fileReplacements": [{
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.prod.ts"
+                            }],
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "namedChunks": false,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "budgets": [{
+                                    "type": "initial",
+                                    "maximumWarning": "500kb",
+                                    "maximumError": "1mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "2kb",
+                                    "maximumError": "4kb"
+                                }
+                            ]
+                        }
+                    }
                 },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+                        "browserTarget": "Ecommerce-AdminLTE:build"
+                    },
+                    "configurations": {
+                        "production": {
+                            "browserTarget": "Ecommerce-AdminLTE:build:production"
+                        }
+                    }
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "browserTarget": "Ecommerce-AdminLTE:build"
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "src/test.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "tsconfig.spec.json",
+                        "karmaConfig": "karma.conf.js",
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets"
+                        ],
+                        "styles": [{
+                                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+                            },
+                            "src/styles.css"
+                        ],
+                        "scripts": []
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "tsconfig.app.json",
+                            "tsconfig.spec.json",
+                            "e2e/tsconfig.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                },
+                "e2e": {
+                    "builder": "@angular-devkit/build-angular:protractor",
+                    "options": {
+                        "protractorConfig": "e2e/protractor.conf.js",
+                        "devServerTarget": "Ecommerce-AdminLTE:serve"
+                    },
+                    "configurations": {
+                        "production": {
+                            "devServerTarget": "Ecommerce-AdminLTE:serve:production"
+                        }
+                    }
                 }
-              ]
             }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "Ecommerce-AdminLTE:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "Ecommerce-AdminLTE:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "Ecommerce-AdminLTE:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              {
-                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
-              },
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Ecommerce-AdminLTE:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "Ecommerce-AdminLTE:serve:production"
-            }
-          }
         }
-      }
-    }
-  },
-  "defaultProject": "Ecommerce-AdminLTE"
+    },
+    "defaultProject": "Ecommerce-AdminLTE"
 }
