--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,7 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": [{
-                                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
-                            },
+                        "styles": [
                             "node_modules/flatpickr/dist/flatpickr.min.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
