--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bootstrap": "^4.6.0",
     "calendar-utils": "^0.8.4",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.0.0",
     "datatables.net": "^1.10.23",
     "datatables.net-bs4": "^1.10.23",
     "datatables.net-dt": "^1.10.23",
