--- a/package.json
+++ b/package.json
@@ -28,12 +28,42 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@progress/kendo-angular-buttons": "^6.0.0",
+    "@progress/kendo-angular-charts": "^5.1.0",
     "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dateinputs": "^5.0.0",
     "@progress/kendo-angular-dialog": "^5.0.0",
+    "@progress/kendo-angular-dropdowns": "^5.0.0",
+    "@progress/kendo-angular-editor": "^2.0.1",
+    "@progress/kendo-angular-excel-export": "^4.0.0",
+    "@progress/kendo-angular-gauges": "^4.0.0",
+    "@progress/kendo-angular-grid": "^5.0.2",
+    "@progress/kendo-angular-icons": "^0.4.2",
+    "@progress/kendo-angular-indicators": "^1.0.0",
+    "@progress/kendo-angular-inputs": "^7.0.0",
+    "@progress/kendo-angular-intl": "^3.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-label": "^3.0.0",
+    "@progress/kendo-angular-layout": "^6.1.2",
+    "@progress/kendo-angular-listview": "^2.0.0",
+    "@progress/kendo-angular-notification": "^3.0.0",
+    "@progress/kendo-angular-pager": "^2.0.0",
+    "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-progressbar": "^2.0.0",
+    "@progress/kendo-angular-ripple": "^3.0.0",
+    "@progress/kendo-angular-scheduler": "^2.1.1",
+    "@progress/kendo-angular-scrollview": "^4.0.1",
+    "@progress/kendo-angular-sortable": "^4.0.0",
+    "@progress/kendo-angular-toolbar": "^4.0.0",
+    "@progress/kendo-angular-tooltip": "^3.0.0",
+    "@progress/kendo-angular-treelist": "^3.0.2",
+    "@progress/kendo-angular-treeview": "^5.0.0",
     "@progress/kendo-angular-upload": "^7.1.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-date-math": "^1.5.1",
+    "@progress/kendo-drawing": "^1.0.0",
     "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-recurrence": "^1.0.0",
     "@progress/kendo-theme-bootstrap": "^4.31.0",
     "@progress/kendo-theme-default": "latest",
     "@types/datatables.net": "^1.10.19",
@@ -55,6 +85,7 @@
     "filepond": "^4.25.1",
     "flatpickr": "^4.6.9",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "jquery-dropdown": "^1.0.0",
     "line-awesome": "^1.3.0",
