--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "rxjs-compat": "^6.6.3",
     "rxjs-observable": "0.0.7",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
